# frenzvalios.xyz

./: SIS-students.json  pyproject.toml
static/: index.html  prenk.html  your_friends.html
static/css/: bootstrap.css  replit.css  style.css
static/js/: yt2mp3.js
static/page/html/: crush.html  gibberish-api.html  ruridoc.html  testarea.html  yt2mp3.html  yt2mp3api.html
templates/: 404.html  500.html  api.html  emoji-translate.html  emoji.html  gibberish.html  github-image-upload.html  imagine.html  index.html  place.html  sayout-thankyou.html  sayout.html  sis-students.html  sis.html  text2png.html  thoughts.html  upload.html  your_thoughts.html
