[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
fbchat = "^1.9.7"
openai = "^0.25.0"
Pillow = "^9.4.0"
Flask-Caching = "^2.0.2"
Flask-Cors = "^3.0.10"
Flask-SocketIO = "^5.3.2"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pandas = "^2.0.1"
Flask-SQLAlchemy = "^3.0.5"
yt-dlp = "^2023.7.6"
PyGithub = "^1.59.1"
Flask-Admin = "^1.6.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"